src/main/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: static-site-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - www.griend.dev
    secretName: static-site-tls
  rules:
  - host: www.griend.dev
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: static-site-service
            port:
              number: 80
